add frontend pages

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -95,3 +95,21 @@ body {
 .svgBG {
   /* background: url(images/coder.svg); */
 }
+
+/* Profile Page */
+.text-secondary,
+.text-secondary-hover:hover {
+  color: #59b73f !important;
+}
+
+.display-25 {
+  font-size: 1.4rem;
+}
+
+/* Activity Page */
+pre {
+  /* border: 1px outset red; */
+  border: 1px solid grey;
+  border-radius: 5px;
+  padding-left: 15px;
+}
