--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,5 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap'); */
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Ubuntu:&display=swap'); */
 
 * {
   padding: 0;
